// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cast casts 1`] = `
"//// @link code _00_


     fn _00_getValue() -> vec2<f32> { return vec2<f32>(1.0, 2.0); }
    
//// @link @cast [getValue vec2<f32>] 

fn cast() -> vec3<f32> {
  let v = _00_getValue();
  return v.xyx;
}
"
`;

exports[`cast casts and links 1`] = `
"//// @link code _00_


    fn _00_getValue() -> vec2<f32> { return vec2<f32>(1.0, 2.0); }
    
//// @link @cast [getValue vec2<f32>] _01_

fn _01_cast() -> vec3<f32> {
  let v = _00_getValue();
  return v.xyx;
}

//// @link main 


    fn main() { _01_cast(); }
    "
`;

exports[`cast casts compact swizzle 1`] = `
"//// @link code _00_


     fn _00_getValue() -> vec2<f32> { return vec2<f32>(1.0, 2.0); }
    
//// @link @cast [getValue vec2<f32>] 

fn cast() -> vec4<f32> {
  let v = _00_getValue();
  return vec4<f32>(v.xy, -v.z, v.w) * 2.0;
}
"
`;

exports[`cast casts complex swizzle 1`] = `
"//// @link code _00_


     fn _00_getValue() -> vec2<f32> { return vec2<f32>(1.0, 2.0); }
    
//// @link @cast [getValue vec2<f32>] 

fn cast() -> vec4<f32> {
  let v = _00_getValue();
  return vec4<f32>(-v.x, v.y, -1.0, 0.0) * 2.0;
}
"
`;

exports[`cast swizzles 1`] = `
"//// @link @swizzle 

fn swizzle(a: vec3<f32>) -> vec3<f32> {
  return a.xyx;
}
"
`;
